# self-optimized-dpc

./: 3D_DPC_illumination_design.ipynb  README.md  design_3ddpc_illumination.py  led_array_pos_na_z65mm.json  opticstools.py  optimized_4patterns.json  pyproject.toml  solver_3ddpc.py  visualization.py
