[project]
name = "3d-dpc-illumination-design"
version = "0.1.0"
description = "End-to-end design of LED array illumination patterns for 3D Differential Phase Contrast microscopy"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "scikit-image",
    "Pillow",
    "tensorflow>=2.3,<2.16",  # TF2 only; tf.signal.fftshift requires >=2.3, Keras 3 (>=2.16) breaks tf.keras API
    "jupyter",
    "ipykernel",
]

[tool.uv]
dev-dependencies = []
